feat: add reel prototypes

--- a/apps/server/src/content/blog/thunderkick/grand-melee.mdx
+++ b/apps/server/src/content/blog/thunderkick/grand-melee.mdx
@@ -23,6 +23,46 @@ Volatility: High
 
 Max Exposure: 5000X
 
+
+## Animations
+
+### Symbols
+
+How thunderkick works with Symbols
+
+#### Composite Symbols
+
+How effects and symbols are merged
+
+#### Lows
+
+How low symbols are made with skins
+
+
+import GrandMeleeLowsStage from "./grand-melee/lows.astro";
+
+<GrandMeleeLowsStage />
+
+### Splash
+
+How splash animation works
+
+### Stage
+
+How stage animation works
+
+## Reels
+
+How Thunderkick reels works
+
+### Prototyping kit
+
+Thunderkick uses following kit to prototype reels without assets
+
+### Timings
+
+Following timings are common for slots made by Thunderkick
+
 ## More Links
 
 - [Grand Melee on Thunderkick website](https://www.thunderkick.com/games/grand-melee/)
